# rQuake

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: bspfile.h  common.h  glquake.h  glquake2.h  input.h  pr_comp.h  progs.h  qtypes64.h  quakedef.h  sdl_local.h
src/: cd_sdl.c  cl_input.c  cl_main.c  common.c  gl_draw.c  gl_model.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_vid_sdl.c  host.c  host_cmd.c  in_sdl.c  keys.c  menu.c  net_main.c  net_sdl.c  pr_cmds.c  pr_edict.c  pr_exec.c  r_part.c  sbar.c  snd_dma.c  snd_mem.c  snd_mix.c  snd_sdl.c  sv_main.c  sys_sdl.c
